--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,4 +1,4 @@
-/* Sticky footer styles
+  /* Sticky footer styles
   -------------------------------------------------- */
   html {
     position: relative;
@@ -7,6 +7,9 @@
   body {
     /* Margin bottom by footer height */
     margin-bottom: 90px;
+  }
+  body > .container {
+    padding-top: 60px;
   }
   .padded {
     padding-top: 30px
